# deepai_banner_generator

./: .env.example  .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  chain_banner.py  coverage.xml  deepai_styles.yaml  prompts.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
docs/: CONCURRENT_TEST_RESULTS.md  REFACTOR_SUMMARY.md
lib/: __init__.py  config.py  deepai.py  file_handler.py  gpt.py  logger.py  prompts.py  selection_parser.py
lib/deepai/: __init__.py  client.py  styles.py
posts/: the-meaning-of-quality.md
tests/: __init__.py  conftest.py  test_config.py  test_deepai.py  test_deepai_styles.py  test_file_handler.py  test_gpt.py  test_prompts.py  test_selection_parser.py
